Reverted AI into simple and complex
The latter is pending, first is functional

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -324,8 +324,8 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
 BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
-SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
-CapsuleComponent=
+SkeletalMeshComponent=
+CapsuleComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
 AudioEditorSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
@@ -383,9 +383,13 @@ LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureR
 CharacterMovementComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 EdGraphNode=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 K2Node_VariableSet=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+StaticMeshActor=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+BP_Enemy_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+BP_Enemy_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_Enemy_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+BP_ThirdPersonCharacter_Enemy_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/AI/Tasks
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -639,11 +643,11 @@ MediaSource="\"Object\" "
 MediaPlayer="\"Object\" "
 SoundWave="\"Object\" "
 SoundBase="\"Object\" "
-BP_ThirdPersonCharacter_C=
-Character=
-Pawn=
-BP_ThirdPersonCharacter_Enemy_C="\"Object.Actor.Tags\" "
-BP_EnemyAI_C=
+BP_ThirdPersonCharacter_C="\"Object\" \"Object.Actor.Tags\" "
+Character="\"Object\" \"Object.Actor.Tags\" "
+Pawn="\"Object\" \"Object.Actor.Tags\" "
+BP_ThirdPersonCharacter_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
+BP_EnemyAI_C="\"Object\" "
 PawnSensingComponent="\"Object\" "
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -727,18 +731,12 @@ DataValidationSettings="\"Object\" "
 GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" \"Object.VisualLogger.GraphsBackgroundColor\" "
+BP_Enemy_v2_C="\"Object.Pawn.Pawn|Input\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPerson/AI/NewBlendSpace.NewBlendSpace
-OpenAssetsAtExit=/Game/ThirdPerson/AI/AP_Enemy_AI.AP_Enemy_AI
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection.AnimNS_HitDetection
-OpenAssetsAtExit=/Game/Resources/BP_FootstepAnimNotify.BP_FootstepAnimNotify
-OpenAssetsAtExit=/Game/ThirdPerson/AI/BT_Enemy_AI.BT_Enemy_AI
-OpenAssetsAtExit=/Game/ThirdPerson/AI/BBD_Enemy_AI.BBD_Enemy_AI
-OpenAssetsAtExit=/Game/ThirdPerson/AI/Tasks/BTTask_Roam.BTTask_Roam
-OpenAssetsAtExit=/Game/ThirdPerson/AI/Enemy_AI_Controller.Enemy_AI_Controller
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -798,24 +796,24 @@ AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
 SkeletalMeshComponent.TransformCommon=True
 SkeletalMeshComponent.Animation=True
-SkeletalMeshComponent.Mesh=True
-SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Mesh=False
+SkeletalMeshComponent.Materials=False
 SkeletalMeshComponent.Physics=True
-SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Collision=False
 SkeletalMeshComponent.Clothing=True
-SkeletalMeshComponent.Lighting=True
-SkeletalMeshComponent.LeaderPoseComponent=True
-SkeletalMeshComponent.AnimationRig=True
-SkeletalMeshComponent.Deformer=True
-SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Lighting=False
+SkeletalMeshComponent.LeaderPoseComponent=False
+SkeletalMeshComponent.AnimationRig=False
+SkeletalMeshComponent.Deformer=False
+SkeletalMeshComponent.SkinWeights=False
 SkeletalMeshComponent.Rendering=True
-SkeletalMeshComponent.HLOD=True
-SkeletalMeshComponent.PathTracing=True
-SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.HLOD=False
+SkeletalMeshComponent.PathTracing=False
+SkeletalMeshComponent.Navigation=False
 SkeletalMeshComponent.VirtualTexture=True
-SkeletalMeshComponent.Tags=True
-SkeletalMeshComponent.Activation=True
-SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Tags=False
+SkeletalMeshComponent.Activation=False
+SkeletalMeshComponent.Cooking=False
 PlayerStart.TransformCommon=True
 PlayerStart.Object=True
 PlayerStart.Rendering=True
@@ -1215,8 +1213,8 @@ EdGraphNode_Comment.Comment=True
 K2Node_InputAction.Input=True
 SkeletalMeshComponent.Variable=True
 SkeletalMeshComponent.Sockets=True
-SkeletalMeshComponent.ComponentTick=True
-SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.ComponentTick=False
+SkeletalMeshComponent.ComponentReplication=False
 SkeletalMeshComponent.Events=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
@@ -1980,6 +1978,145 @@ DataValidationSettings.Validation Scenarios=True
 GameplayDebuggerUserSettings.GameplayDebugger=True
 GameplayTagsDeveloperSettings.GameplayTags=True
 LogVisualizerSettings.VisualLogger=True
+BlackboardData.Key=True
+SkeletalMeshComponent.SkeletalMesh=False
+SkeletalMeshComponent.Optimization=False
+SkeletalMeshComponent.MaterialParameters=False
+SkeletalMeshComponent.TextureStreaming=False
+SkeletalMeshComponent.Mobile=False
+SkeletalMeshComponent.RayTracing=False
+SkeletalMeshComponent.AssetUserData=False
+SkeletalMeshComponent.Replication=True
+BP_Enemy_v2_C.TransformCommon=True
+BP_Enemy_v2_C.Animation=True
+BP_Enemy_v2_C.Mesh=True
+BP_Enemy_v2_C.Tick=True
+BP_Enemy_v2_C.ComponentTick=True
+BP_Enemy_v2_C.Clothing=True
+BP_Enemy_v2_C.LeaderPoseComponent=True
+BP_Enemy_v2_C.Physics=True
+BP_Enemy_v2_C.Collision=True
+BP_Enemy_v2_C.AnimationRig=True
+BP_Enemy_v2_C.Lighting=True
+BP_Enemy_v2_C.Deformer=True
+BP_Enemy_v2_C.SkinWeights=True
+BP_Enemy_v2_C.HLOD=True
+BP_Enemy_v2_C.Rendering=True
+BP_Enemy_v2_C.PathTracing=True
+BP_Enemy_v2_C.Mobile=True
+BP_Enemy_v2_C.Navigation=True
+BP_Enemy_v2_C.RayTracing=True
+BP_Enemy_v2_C.VirtualTexture=True
+BP_Enemy_v2_C.Tags=True
+BP_Enemy_v2_C.AssetUserData=True
+BP_Enemy_v2_C.Replication=True
+BP_Enemy_v2_C.ComponentReplication=True
+BP_Enemy_v2_C.Activation=True
+BP_Enemy_v2_C.Variable=True
+BP_Enemy_v2_C.Cooking=True
+BP_Enemy_v2_C.Character Movement (General Settings)=True
+BP_Enemy_v2_C.Character Movement: Walking=True
+BP_Enemy_v2_C.Character Movement: Jumping / Falling=True
+BP_Enemy_v2_C.Character Movement (Networking)=True
+BP_Enemy_v2_C.Character Movement: Swimming=True
+BP_Enemy_v2_C.Character Movement: Flying=True
+BP_Enemy_v2_C.Character Movement: Custom Movement=True
+BP_Enemy_v2_C.Character Movement (Rotation Settings)=True
+BP_Enemy_v2_C.Character Movement: Physics Interaction=True
+BP_Enemy_v2_C.Character Movement=True
+BP_Enemy_v2_C.Character Movement: Avoidance=True
+BP_Enemy_v2_C.RootMotion=True
+BP_Enemy_v2_C.Character Movement: NavMesh Movement=True
+BP_Enemy_v2_C.NavMovement=True
+BP_Enemy_v2_C.Velocity=True
+BP_Enemy_v2_C.PlanarMovement=True
+BP_Enemy_v2_C.MovementComponent=True
+BP_Enemy_v2_C.Shape=True
+BP_Enemy_v2_C.Character=True
+BP_Enemy_v2_C.Camera=True
+BP_Enemy_v2_C.Pawn=True
+BP_Enemy_v2_C.Actor=True
+BP_Enemy_v2_C.Input=True
+BP_Enemy_v2_C.WorldPartition=True
+BP_Enemy_v2_C.Events=True
+BP_Enemy_v2_C.SkeletalMesh=True
+BP_Enemy_v2_C.Optimization=True
+BP_Enemy_v2_C.LOD=True
+BP_Enemy_AI_v2_C.TransformCommon=True
+BP_Enemy_AI_v2_C.Animation=True
+BP_Enemy_AI_v2_C.Mesh=True
+BP_Enemy_AI_v2_C.Tick=True
+BP_Enemy_AI_v2_C.ComponentTick=True
+BP_Enemy_AI_v2_C.Clothing=True
+BP_Enemy_AI_v2_C.LeaderPoseComponent=True
+BP_Enemy_AI_v2_C.Physics=True
+BP_Enemy_AI_v2_C.Collision=True
+BP_Enemy_AI_v2_C.AnimationRig=True
+BP_Enemy_AI_v2_C.Lighting=True
+BP_Enemy_AI_v2_C.Deformer=True
+BP_Enemy_AI_v2_C.SkinWeights=True
+BP_Enemy_AI_v2_C.HLOD=True
+BP_Enemy_AI_v2_C.Rendering=True
+BP_Enemy_AI_v2_C.PathTracing=True
+BP_Enemy_AI_v2_C.Mobile=True
+BP_Enemy_AI_v2_C.Navigation=True
+BP_Enemy_AI_v2_C.RayTracing=True
+BP_Enemy_AI_v2_C.VirtualTexture=True
+BP_Enemy_AI_v2_C.Tags=True
+BP_Enemy_AI_v2_C.AssetUserData=True
+BP_Enemy_AI_v2_C.Replication=True
+BP_Enemy_AI_v2_C.ComponentReplication=True
+BP_Enemy_AI_v2_C.Activation=True
+BP_Enemy_AI_v2_C.Variable=True
+BP_Enemy_AI_v2_C.Cooking=True
+BP_Enemy_AI_v2_C.Character Movement (General Settings)=True
+BP_Enemy_AI_v2_C.Character Movement: Walking=True
+BP_Enemy_AI_v2_C.Character Movement: Jumping / Falling=True
+BP_Enemy_AI_v2_C.Character Movement (Networking)=True
+BP_Enemy_AI_v2_C.Character Movement: Swimming=True
+BP_Enemy_AI_v2_C.Character Movement: Flying=True
+BP_Enemy_AI_v2_C.Character Movement: Custom Movement=True
+BP_Enemy_AI_v2_C.Character Movement (Rotation Settings)=True
+BP_Enemy_AI_v2_C.Character Movement: Physics Interaction=True
+BP_Enemy_AI_v2_C.Character Movement=True
+BP_Enemy_AI_v2_C.Character Movement: Avoidance=True
+BP_Enemy_AI_v2_C.RootMotion=True
+BP_Enemy_AI_v2_C.Character Movement: NavMesh Movement=True
+BP_Enemy_AI_v2_C.NavMovement=True
+BP_Enemy_AI_v2_C.Velocity=True
+BP_Enemy_AI_v2_C.PlanarMovement=True
+BP_Enemy_AI_v2_C.MovementComponent=True
+BP_Enemy_AI_v2_C.Shape=True
+BP_Enemy_AI_v2_C.Character=True
+BP_Enemy_AI_v2_C.Camera=True
+BP_Enemy_AI_v2_C.Pawn=True
+BP_Enemy_AI_v2_C.Actor=True
+BP_Enemy_AI_v2_C.Input=True
+BP_Enemy_AI_v2_C.WorldPartition=True
+BP_Enemy_AI_v2_C.Events=True
+BP_Enemy_AI_v2_C.Materials=True
+CapsuleComponent.Mobile=True
+CapsuleComponent.RayTracing=True
+CapsuleComponent.AssetUserData=True
+CapsuleComponent.Replication=True
+BP_Enemy_AI_v2_C.LOD=True
+BP_Enemy_AI_v2_C.Networking=True
+Enemy_AI_Controller_v2_C.Tick=True
+Enemy_AI_Controller_v2_C.AI=True
+Enemy_AI_Controller_v2_C.ComponentTick=True
+Enemy_AI_Controller_v2_C.Tags=True
+Enemy_AI_Controller_v2_C.Replication=True
+Enemy_AI_Controller_v2_C.ComponentReplication=True
+Enemy_AI_Controller_v2_C.Activation=True
+Enemy_AI_Controller_v2_C.Variable=True
+Enemy_AI_Controller_v2_C.Cooking=True
+Enemy_AI_Controller_v2_C.Controller=True
+Enemy_AI_Controller_v2_C.Actor=True
+Enemy_AI_Controller_v2_C.Input=True
+Enemy_AI_Controller_v2_C.HLOD=True
+Enemy_AI_Controller_v2_C.Physics=True
+Enemy_AI_Controller_v2_C.WorldPartition=True
+Enemy_AI_Controller_v2_C.Events=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2104,8 +2241,11 @@ StaticMeshActor.StaticMesh=True
 K2Node_VariableGet.Variable=False
 WorldSettings.WorldPartitionSetup=True
 WorldSettings.WorldPartition=False
+BP_EnemyAI_C.Character Movement: Jumping / Falling=True
+BP_EnemyAI_C.Character Movement: Swimming=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2.BP_Enemy_AI_v2;
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin.DrSFinalJoin;
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin11.DrSFinalJoin11;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -2125,29 +2265,28 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRough.skullRough;
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin8.DrSFinalJoin8;
 RecentlyPlaced=/Game/Blender_Collections/DrSPartsParsed/DrSFinal_Blade.DrSFinal_Blade;
 RecentlyPlaced=/Game/Collections/DrSFinalJoin7.DrSFinalJoin7;
-RecentlyPlaced=/Game/Collections/DrSFinalJoin6.DrSFinalJoin6;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/AI/Enemy_AI_Controller
-MRUItem1=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem2=/Game/ThirdPerson/AI/BT_Enemy_AI
-MRUItem3=/Game/Resources/BP_FootstepAnimNotify
-MRUItem4=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem6=/Game/ThirdPerson/AI/AP_Enemy_AI
-MRUItem7=/Game/ThirdPerson/AI/NewBlendSpace
-MRUItem8=/Game/ThirdPerson/AI/BBD_Enemy_AI
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem10=/Game/Resources/PM_Water
-MRUItem11=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem13=/Game/Resources/SFX/CLANG
-MRUItem14=/Game/Resources/CLANG
-MRUItem15=/Game/Resources/PM_Wood
-MRUItem16=/Game/Resources/PM_Metal
-MRUItem17=/Game/Resources/PM_Grass
-MRUItem18=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem19=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem2=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem3=/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2
+MRUItem4=/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2
+MRUItem5=/Game/ThirdPerson/AI/Enemy_AI_Controller
+MRUItem6=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem7=/Game/ThirdPerson/AI/BT_Enemy_AI
+MRUItem8=/Game/Resources/BP_FootstepAnimNotify
+MRUItem9=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem11=/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2
+MRUItem12=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem13=/Game/ThirdPerson/AI/v2/BP_Enemy_v2
+MRUItem14=/Game/ThirdPerson/AI/BBD_Enemy_AI
+MRUItem15=/Game/Resources/PM_Water
+MRUItem16=/Game/ThirdPerson/Input/Actions/IA_Jump
+MRUItem17=/Game/Resources/SFX/CLANG
+MRUItem18=/Game/Resources/CLANG
+MRUItem19=/Game/Resources/PM_Wood
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -2182,6 +2321,11 @@ MRUItem19=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
 /Game/ThirdPerson/AI/BT_Enemy_AI.BT_Enemy_AI=0
 /Game/ThirdPerson/AI/Tasks/BTTask_Roam.BTTask_Roam=0
 /Game/ThirdPerson/AI/Enemy_AI_Controller.Enemy_AI_Controller=0
+/Game/ThirdPerson/AI/v2/BP_Enemy_v2.BP_Enemy_v2=0
+/Game/ThirdPerson/AI/v2/BP_Enemy_v2.Default__BP_Enemy_v2_C=1
+/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2.BP_Enemy_AI_v2=0
+/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2.Enemy_AI_Controller_v2=0
+/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2.BT_Enemy_AI_v2=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2312,7 +2456,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-2296.000 Y=486.000
+ScreenPosition=X=264.000 Y=486.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -3538,4 +3682,12 @@ PrimType=1
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24
+Property=0.5
+Value=1
+
+[MRU]
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
 
