Basic Roaming AI added
Postfixed with _v2

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -323,9 +323,9 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
-BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
-SkeletalMeshComponent=
-CapsuleComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
+SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
+CapsuleComponent=
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
 AudioEditorSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
@@ -387,6 +387,10 @@ StaticMeshActor=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Phys
 BP_Enemy_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_Enemy_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_Enemy_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_ThirdPersonCharacter_Enemy_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+BP_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
+NavMeshBoundsVolume=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
+BrushComponent=
+AB_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/AI/Tasks
@@ -582,7 +586,7 @@ TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
-EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
 ABP_Manny_C="\"Object\" "
@@ -644,10 +648,10 @@ MediaPlayer="\"Object\" "
 SoundWave="\"Object\" "
 SoundBase="\"Object\" "
 BP_ThirdPersonCharacter_C="\"Object\" \"Object.Actor.Tags\" "
-Character="\"Object\" \"Object.Actor.Tags\" "
-Pawn="\"Object\" \"Object.Actor.Tags\" "
+Character="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+Pawn="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 BP_ThirdPersonCharacter_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
-BP_EnemyAI_C="\"Object\" "
+BP_EnemyAI_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.Tags\" "
 PawnSensingComponent="\"Object\" "
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -732,11 +736,17 @@ GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" \"Object.VisualLogger.GraphsBackgroundColor\" "
 BP_Enemy_v2_C="\"Object.Pawn.Pawn|Input\" "
+BP_AI_v2_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+AB_AI_v2_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPerson/AI/Tasks/BTTask_Roam.BTTask_Roam
+OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2.BlendSpace_AI_v2
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection.AnimNS_HitDetection
+OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/AI_Controller_v2.AI_Controller_v2
+OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BP_AI_v2.BP_AI_v2
+OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BT_AI_v2.BT_AI_v2
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -796,7 +806,7 @@ AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
 SkeletalMeshComponent.TransformCommon=True
 SkeletalMeshComponent.Animation=True
-SkeletalMeshComponent.Mesh=False
+SkeletalMeshComponent.Mesh=True
 SkeletalMeshComponent.Materials=False
 SkeletalMeshComponent.Physics=True
 SkeletalMeshComponent.Collision=False
@@ -2117,6 +2127,85 @@ Enemy_AI_Controller_v2_C.HLOD=True
 Enemy_AI_Controller_v2_C.Physics=True
 Enemy_AI_Controller_v2_C.WorldPartition=True
 Enemy_AI_Controller_v2_C.Events=True
+BP_AI_v2_C.TransformCommon=True
+BP_AI_v2_C.Animation=True
+BP_AI_v2_C.Mesh=True
+BP_AI_v2_C.Tick=True
+BP_AI_v2_C.ComponentTick=True
+BP_AI_v2_C.Clothing=True
+BP_AI_v2_C.LeaderPoseComponent=True
+BP_AI_v2_C.Physics=True
+BP_AI_v2_C.Collision=True
+BP_AI_v2_C.AnimationRig=True
+BP_AI_v2_C.Lighting=True
+BP_AI_v2_C.Deformer=True
+BP_AI_v2_C.SkinWeights=True
+BP_AI_v2_C.HLOD=True
+BP_AI_v2_C.Rendering=True
+BP_AI_v2_C.PathTracing=True
+BP_AI_v2_C.Mobile=True
+BP_AI_v2_C.Navigation=True
+BP_AI_v2_C.RayTracing=True
+BP_AI_v2_C.VirtualTexture=True
+BP_AI_v2_C.Tags=True
+BP_AI_v2_C.AssetUserData=True
+BP_AI_v2_C.Replication=True
+BP_AI_v2_C.ComponentReplication=True
+BP_AI_v2_C.Activation=True
+BP_AI_v2_C.Variable=True
+BP_AI_v2_C.Cooking=True
+BP_AI_v2_C.Character Movement (General Settings)=True
+BP_AI_v2_C.Character Movement: Walking=True
+BP_AI_v2_C.Character Movement: Jumping / Falling=True
+BP_AI_v2_C.Character Movement (Networking)=True
+BP_AI_v2_C.Character Movement: Swimming=True
+BP_AI_v2_C.Character Movement: Flying=True
+BP_AI_v2_C.Character Movement: Custom Movement=True
+BP_AI_v2_C.Character Movement (Rotation Settings)=True
+BP_AI_v2_C.Character Movement: Physics Interaction=True
+BP_AI_v2_C.Character Movement=True
+BP_AI_v2_C.Character Movement: Avoidance=True
+BP_AI_v2_C.RootMotion=True
+BP_AI_v2_C.Character Movement: NavMesh Movement=True
+BP_AI_v2_C.NavMovement=True
+BP_AI_v2_C.Velocity=True
+BP_AI_v2_C.PlanarMovement=True
+BP_AI_v2_C.MovementComponent=True
+BP_AI_v2_C.Shape=True
+BP_AI_v2_C.Character=True
+BP_AI_v2_C.Camera=True
+BP_AI_v2_C.Pawn=True
+BP_AI_v2_C.Actor=True
+BP_AI_v2_C.Input=True
+BP_AI_v2_C.WorldPartition=True
+BP_AI_v2_C.Events=True
+AI_Controller_v2_C.Tick=True
+AI_Controller_v2_C.AI=True
+AI_Controller_v2_C.ComponentTick=True
+AI_Controller_v2_C.Tags=True
+AI_Controller_v2_C.Replication=True
+AI_Controller_v2_C.ComponentReplication=True
+AI_Controller_v2_C.Activation=True
+AI_Controller_v2_C.Variable=True
+AI_Controller_v2_C.Cooking=True
+AI_Controller_v2_C.Controller=True
+AI_Controller_v2_C.Actor=True
+AI_Controller_v2_C.Input=True
+AI_Controller_v2_C.HLOD=True
+AI_Controller_v2_C.Physics=True
+AI_Controller_v2_C.WorldPartition=True
+AI_Controller_v2_C.Events=True
+BP_AI_v2_C.Networking=True
+BP_AI_v2_C.Materials=True
+BP_AI_v2_C.SkeletalMesh=True
+BP_AI_v2_C.Optimization=True
+BP_AI_v2_C.LOD=True
+BP_AI_v2_C.MaterialParameters=True
+BP_AI_v2_C.TextureStreaming=True
+BP_AI_v2_C.DataLayers=True
+AB_AI_v2_C.RootMotion=True
+AB_AI_v2_C.Notifies=True
+AB_AI_v2_C.Montage=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2245,6 +2334,7 @@ BP_EnemyAI_C.Character Movement: Jumping / Falling=True
 BP_EnemyAI_C.Character Movement: Swimming=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPerson/AI/v2/BP_AI_v2.BP_AI_v2;
 RecentlyPlaced=/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2.BP_Enemy_AI_v2;
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin.DrSFinalJoin;
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin11.DrSFinalJoin11;
@@ -2264,29 +2354,28 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRoughSmooth.skullRoug
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRough.skullRough;
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin8.DrSFinalJoin8;
 RecentlyPlaced=/Game/Blender_Collections/DrSPartsParsed/DrSFinal_Blade.DrSFinal_Blade;
-RecentlyPlaced=/Game/Collections/DrSFinalJoin7.DrSFinalJoin7;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem2=/Game/ThirdPerson/AI/AP_Enemy_AI
-MRUItem3=/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2
-MRUItem4=/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2
-MRUItem5=/Game/ThirdPerson/AI/Enemy_AI_Controller
-MRUItem6=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem7=/Game/ThirdPerson/AI/BT_Enemy_AI
-MRUItem8=/Game/Resources/BP_FootstepAnimNotify
-MRUItem9=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
-MRUItem10=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem11=/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2
-MRUItem12=/Game/ThirdPerson/AI/NewBlendSpace
-MRUItem13=/Game/ThirdPerson/AI/v2/BP_Enemy_v2
-MRUItem14=/Game/ThirdPerson/AI/BBD_Enemy_AI
-MRUItem15=/Game/Resources/PM_Water
-MRUItem16=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem17=/Game/Resources/SFX/CLANG
-MRUItem18=/Game/Resources/CLANG
-MRUItem19=/Game/Resources/PM_Wood
+MRUItem0=/Game/ThirdPerson/AI/v2/AB_AI_v2
+MRUItem1=/Game/ThirdPerson/AI/v2/NewBlendSpace
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem3=/Game/ThirdPerson/AI/v2/AI_Controller_v2
+MRUItem4=/Game/ThirdPerson/AI/v2/BP_AI_v2
+MRUItem5=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem6=/Game/ThirdPerson/AI/v2/BT_AI
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem9=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem10=/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2
+MRUItem11=/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2
+MRUItem12=/Game/ThirdPerson/AI/Enemy_AI_Controller
+MRUItem13=/Game/ThirdPerson/AI/BT_Enemy_AI
+MRUItem14=/Game/Resources/BP_FootstepAnimNotify
+MRUItem15=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
+MRUItem16=/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2
+MRUItem17=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem18=/Game/ThirdPerson/AI/v2/BP_Enemy_v2
+MRUItem19=/Game/ThirdPerson/AI/BBD_Enemy_AI
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
