More complicated AI instantiated

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -389,7 +389,7 @@ BP_Enemy_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_Enemy_AI_v2_C.Physics.
 BP_ThirdPersonCharacter_Enemy_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 NavMeshBoundsVolume=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
-BrushComponent=
+BrushComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
 AB_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
@@ -468,11 +468,11 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Blackboard\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" \"Object.Blackboard\" "
 AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
@@ -586,7 +586,7 @@ TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
-EdGraphNode="\"Object\" "
+EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
 ABP_Manny_C="\"Object\" "
@@ -738,6 +738,11 @@ LogVisualizerSettings="\"Object\" \"Object.VisualLogger.GraphsBackgroundColor\" 
 BP_Enemy_v2_C="\"Object.Pawn.Pawn|Input\" "
 BP_AI_v2_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 AB_AI_v2_C="\"Object\" "
+BTTask_ChasePlayer_C="\"Object\" "
+BTDecorator_Blackboard="\"Object\" "
+BTDecorator_BlackboardBase="\"Object\" "
+BTDecorator="\"Object\" "
+BTAuxiliaryNode="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -2206,6 +2211,11 @@ BP_AI_v2_C.DataLayers=True
 AB_AI_v2_C.RootMotion=True
 AB_AI_v2_C.Notifies=True
 AB_AI_v2_C.Montage=True
+BTTask_ChasePlayer_C.Task=True
+BTTask_ChasePlayer_C.Description=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2356,26 +2366,26 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/DrSFinalJoin8.DrSFinalJoin
 RecentlyPlaced=/Game/Blender_Collections/DrSPartsParsed/DrSFinal_Blade.DrSFinal_Blade;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/AI/v2/AB_AI_v2
-MRUItem1=/Game/ThirdPerson/AI/v2/NewBlendSpace
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem3=/Game/ThirdPerson/AI/v2/AI_Controller_v2
-MRUItem4=/Game/ThirdPerson/AI/v2/BP_AI_v2
-MRUItem5=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem6=/Game/ThirdPerson/AI/v2/BT_AI
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem9=/Game/ThirdPerson/AI/AP_Enemy_AI
-MRUItem10=/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2
-MRUItem11=/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2
-MRUItem12=/Game/ThirdPerson/AI/Enemy_AI_Controller
-MRUItem13=/Game/ThirdPerson/AI/BT_Enemy_AI
-MRUItem14=/Game/Resources/BP_FootstepAnimNotify
-MRUItem15=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
-MRUItem16=/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2
-MRUItem17=/Game/ThirdPerson/AI/NewBlendSpace
-MRUItem18=/Game/ThirdPerson/AI/v2/BP_Enemy_v2
-MRUItem19=/Game/ThirdPerson/AI/BBD_Enemy_AI
+MRUItem0=/Game/ThirdPerson/AI/v2/BBD_AI_v2
+MRUItem1=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
+MRUItem2=/Game/ThirdPerson/AI/v2/AB_AI_v2
+MRUItem3=/Game/ThirdPerson/AI/v2/NewBlendSpace
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem5=/Game/ThirdPerson/AI/v2/AI_Controller_v2
+MRUItem6=/Game/ThirdPerson/AI/v2/BP_AI_v2
+MRUItem7=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem8=/Game/ThirdPerson/AI/v2/BT_AI
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem11=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem12=/Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2
+MRUItem13=/Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2
+MRUItem14=/Game/ThirdPerson/AI/Enemy_AI_Controller
+MRUItem15=/Game/ThirdPerson/AI/BT_Enemy_AI
+MRUItem16=/Game/Resources/BP_FootstepAnimNotify
+MRUItem17=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
+MRUItem18=/Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2
+MRUItem19=/Game/ThirdPerson/AI/NewBlendSpace
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -2415,6 +2425,7 @@ MRUItem19=/Game/ThirdPerson/AI/BBD_Enemy_AI
 /Game/ThirdPerson/AI/v2/BP_Enemy_AI_v2.BP_Enemy_AI_v2=0
 /Game/ThirdPerson/AI/v2/Enemy_AI_Controller_v2.Enemy_AI_Controller_v2=0
 /Game/ThirdPerson/AI/v2/BT_Enemy_AI_v2.BT_Enemy_AI_v2=0
+/Game/ThirdPerson/AI/v2/BBD_AI_v2.BBD_AI_v2=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
