--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -380,7 +380,7 @@ DataValidationSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTexture
 GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
-CharacterMovementComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+CharacterMovementComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 EdGraphNode=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 K2Node_VariableSet=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 StaticMeshActor=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
@@ -389,7 +389,7 @@ BP_Enemy_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_Enemy_AI_v2_C.Physics.
 BP_ThirdPersonCharacter_Enemy_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 BP_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup
 NavMeshBoundsVolume=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
-BrushComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
+BrushComponent=
 AB_AI_v2_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
@@ -468,11 +468,11 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Blackboard\" "
+Object="\"Object\" \"Object.Parent.ParentKeys.ParentKeys[1]\" \"Object.Blackboard\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.Blackboard\" "
+DataAsset="\"Object\" \"Object.Parent.ParentKeys.ParentKeys[1]\" \"Object.Blackboard\" "
 AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
@@ -607,10 +607,10 @@ MaterialInterface="\"Object\" "
 VolumetricCloudComponent="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
-CharacterMovementComponent="\"Object\" "
-PawnMovementComponent="\"Object\" "
-NavMovementComponent="\"Object\" "
-MovementComponent="\"Object\" "
+CharacterMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" "
+PawnMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" "
+NavMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" "
+MovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" "
 BoneProxy="\"Object\" "
 SkeletalMeshSocket="\"Object\" "
 StaticMeshComponent="\"Object\" "
@@ -668,7 +668,7 @@ AnimGraphNode_Slot="\"Object\" "
 Actor="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 InputAction="\"Object\" "
-BlackboardData="\"Object\" \"Object.Blackboard\" "
+BlackboardData="\"Object\" \"Object.Parent.ParentKeys.ParentKeys[1]\" \"Object.Blackboard\" "
 BehaviorTreeGraphNode_Root="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
